Added my name in the document.

--- a/Web/Tareas/Páginas_Web_Simples/web.html
+++ b/Web/Tareas/Páginas_Web_Simples/web.html
@@ -16,6 +16,7 @@
         </nav>
     </header>
     <div id="topic">
+        <p><strong>Jin Sik Yoon - A01026630</strong></p>
         <h1><strong>Web development course!</strong></h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <p>Nunc sed erat eget erat euismod dictum sit amet vel dui. </p>
